src/main/java/com/visitor/SimplerPlusPlusParser.java
package com.visitor;
 // Generated from src/main/java/com/visitor/SimplerPlusPlusParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimplerPlusPlusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, RETURN=2, ASSERT=3, IF=4, ELIF=5, ELSE=6, WHILE=7, FOR=8, IN=9, 
		NULL=10, CONTINUE=11, BREAK=12, TRUE=13, FALSE=14, CONST=15, LESS_THAN=16, 
		GREATER_THAN=17, EQUALS=18, GT_EQ=19, LT_EQ=20, NOT_EQ=21, BIN_OR=22, 
		BIN_XOR=23, BIN_AND=24, LOG_OR=25, LOG_AND=26, LOG_NOT=27, ADD=28, MINUS=29, 
		STAR=30, DIV=31, MOD=32, POWER=33, LEFT_SHIFT=34, RIGHT_SHIFT=35, ASSIGN=36, 
		ADD_ASSIGN=37, SUB_ASSIGN=38, MULT_ASSIGN=39, DIV_ASSIGN=40, MOD_ASSIGN=41, 
		AND_ASSIGN=42, OR_ASSIGN=43, XOR_ASSIGN=44, LEFT_SHIFT_ASSIGN=45, RIGHT_SHIFT_ASSIGN=46, 
		POWER_ASSIGN=47, DOT=48, COMMA=49, COLON=50, QUERT=51, SEMI_COLON=52, 
		ARROW=53, TILDE=54, VOID=55, CHAR=56, SHORT=57, INT=58, LONG=59, FLOAT=60, 
		DOUBLE=61, BOOLEAN=62, STRING=63, STRING_VALUE=64, DECIMAL_INTEGER=65, 
		OCT_INTEGER=66, HEX_INTEGER=67, BIN_INTEGER=68, IMAG_NUMBER=69, FLOAT_NUMBER=70, 
		OPEN_PAREN=71, CLOSE_PAREN=72, OPEN_BRACE=73, CLOSE_BRACE=74, OPEN_BRACKET=75, 
		CLOSE_BRACKET=76, NAME=77, MORE_LINE_COMMENT=78, ONE_LINE_COMMENT=79, 
		NEWLINE=80, WHITESPACE=81;
	public static final int
		RULE_root = 0, RULE_functions = 1, RULE_statement = 2, RULE_block_of_code = 3, 
		RULE_declaration = 4, RULE_declaration_list = 5, RULE_declaration_variable = 6, 
		RULE_declaration_array = 7, RULE_declaration_existing_variable = 8, RULE_declaration_existing_array = 9, 
		RULE_value_declaration = 10, RULE_expression = 11, RULE_compared_expression = 12, 
		RULE_binary_expression = 13, RULE_math_expression = 14, RULE_shift_expression = 15, 
		RULE_unary_expression = 16, RULE_call_expression = 17, RULE_call_array = 18, 
		RULE_call_variable = 19, RULE_deep_expression = 20, RULE_value = 21, RULE_condition = 22, 
		RULE_while_loop = 23, RULE_for_loop = 24, RULE_jump = 25, RULE_def_function = 26, 
		RULE_def_parameters = 27, RULE_def_parameter = 28, RULE_variable_types = 29, 
		RULE_function_types = 30, RULE_integer = 31, RULE_boolean_value = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "functions", "statement", "block_of_code", "declaration", "declaration_list", 
			"declaration_variable", "declaration_array", "declaration_existing_variable", 
			"declaration_existing_array", "value_declaration", "expression", "compared_expression", 
			"binary_expression", "math_expression", "shift_expression", "unary_expression", 
			"call_expression", "call_array", "call_variable", "deep_expression", 
			"value", "condition", "while_loop", "for_loop", "jump", "def_function", 
			"def_parameters", "def_parameter", "variable_types", "function_types", 
			"integer", "boolean_value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'return'", "'assert'", "'if'", "'elif'", "'else'", "'while'", 
			"'for'", "'in'", "'null'", "'continue'", "'break'", "'True'", "'False'", 
			"'const'", "'<'", "'>'", "'='", "'>='", "'<='", "'!='", "'|'", "'^'", 
			"'&'", "'or'", "'and'", "'not'", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", 
			"'<<'", "'>>'", "'<-'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
			"'|='", "'^='", "'<<='", "'>>='", "'**='", "'.'", "','", "':'", "'?'", 
			"';'", "'->'", "'~'", "'void'", "'char'", "'short'", "'int'", "'long'", 
			"'float'", "'double'", "'boolean'", "'string'", null, null, null, null, 
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "RETURN", "ASSERT", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
			"IN", "NULL", "CONTINUE", "BREAK", "TRUE", "FALSE", "CONST", "LESS_THAN", 
			"GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ", "BIN_OR", "BIN_XOR", 
			"BIN_AND", "LOG_OR", "LOG_AND", "LOG_NOT", "ADD", "MINUS", "STAR", "DIV", 
			"MOD", "POWER", "LEFT_SHIFT", "RIGHT_SHIFT", "ASSIGN", "ADD_ASSIGN", 
			"SUB_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", 
			"OR_ASSIGN", "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", 
			"POWER_ASSIGN", "DOT", "COMMA", "COLON", "QUERT", "SEMI_COLON", "ARROW", 
			"TILDE", "VOID", "CHAR", "SHORT", "INT", "LONG", "FLOAT", "DOUBLE", "BOOLEAN", 
			"STRING", "STRING_VALUE", "DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", 
			"BIN_INTEGER", "IMAG_NUMBER", "FLOAT_NUMBER", "OPEN_PAREN", "CLOSE_PAREN", 
			"OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "NAME", 
			"MORE_LINE_COMMENT", "ONE_LINE_COMMENT", "NEWLINE", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimplerPlusPlusParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimplerPlusPlusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimplerPlusPlusParser.EOF, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			functions();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<Def_functionContext> def_function() {
			return getRuleContexts(Def_functionContext.class);
		}
		public Def_functionContext def_function(int i) {
			return getRuleContext(Def_functionContext.class,i);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				def_function();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEF );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public Call_expressionContext call_expression() {
			return getRuleContext(Call_expressionContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(SimplerPlusPlusParser.SEMI_COLON, 0); }
		public JumpContext jump() {
			return getRuleContext(JumpContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				condition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				while_loop();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				for_loop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				declaration_list();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				call_expression();
				setState(79);
				match(SEMI_COLON);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				jump();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_of_codeContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACE() { return getToken(SimplerPlusPlusParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(SimplerPlusPlusParser.CLOSE_BRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Block_of_codeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_of_code; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitBlock_of_code(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_of_codeContext block_of_code() throws RecognitionException {
		Block_of_codeContext _localctx = new Block_of_codeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block_of_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(OPEN_BRACE);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << CHAR) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING))) != 0) || _la==OPEN_PAREN || _la==NAME) {
				{
				{
				setState(85);
				statement();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Declaration_variableContext declaration_variable() {
			return getRuleContext(Declaration_variableContext.class,0);
		}
		public Declaration_existing_variableContext declaration_existing_variable() {
			return getRuleContext(Declaration_existing_variableContext.class,0);
		}
		public Declaration_arrayContext declaration_array() {
			return getRuleContext(Declaration_arrayContext.class,0);
		}
		public Declaration_existing_arrayContext declaration_existing_array() {
			return getRuleContext(Declaration_existing_arrayContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				declaration_variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				declaration_existing_variable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				declaration_array();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				declaration_existing_array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_listContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public TerminalNode SEMI_COLON() { return getToken(SimplerPlusPlusParser.SEMI_COLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SimplerPlusPlusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimplerPlusPlusParser.COMMA, i);
		}
		public Declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_listContext declaration_list() throws RecognitionException {
		Declaration_listContext _localctx = new Declaration_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			declaration();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(100);
				match(COMMA);
				setState(101);
				declaration();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_variableContext extends ParserRuleContext {
		public Variable_typesContext variable_types() {
			return getRuleContext(Variable_typesContext.class,0);
		}
		public TerminalNode NAME() { return getToken(SimplerPlusPlusParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(SimplerPlusPlusParser.ASSIGN, 0); }
		public Value_declarationContext value_declaration() {
			return getRuleContext(Value_declarationContext.class,0);
		}
		public Declaration_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_variableContext declaration_variable() throws RecognitionException {
		Declaration_variableContext _localctx = new Declaration_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			variable_types();
			setState(110);
			match(NAME);
			setState(111);
			match(ASSIGN);
			setState(112);
			value_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_arrayContext extends ParserRuleContext {
		public Variable_typesContext variable_types() {
			return getRuleContext(Variable_typesContext.class,0);
		}
		public TerminalNode NAME() { return getToken(SimplerPlusPlusParser.NAME, 0); }
		public List<TerminalNode> OPEN_BRACKET() { return getTokens(SimplerPlusPlusParser.OPEN_BRACKET); }
		public TerminalNode OPEN_BRACKET(int i) {
			return getToken(SimplerPlusPlusParser.OPEN_BRACKET, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> CLOSE_BRACKET() { return getTokens(SimplerPlusPlusParser.CLOSE_BRACKET); }
		public TerminalNode CLOSE_BRACKET(int i) {
			return getToken(SimplerPlusPlusParser.CLOSE_BRACKET, i);
		}
		public Declaration_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_array; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_arrayContext declaration_array() throws RecognitionException {
		Declaration_arrayContext _localctx = new Declaration_arrayContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			variable_types();
			setState(115);
			match(NAME);
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				match(OPEN_BRACKET);
				setState(117);
				expression();
				setState(118);
				match(CLOSE_BRACKET);
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPEN_BRACKET );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_existing_variableContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SimplerPlusPlusParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(SimplerPlusPlusParser.ASSIGN, 0); }
		public Value_declarationContext value_declaration() {
			return getRuleContext(Value_declarationContext.class,0);
		}
		public Declaration_existing_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_existing_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration_existing_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_existing_variableContext declaration_existing_variable() throws RecognitionException {
		Declaration_existing_variableContext _localctx = new Declaration_existing_variableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaration_existing_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(NAME);
			setState(125);
			match(ASSIGN);
			setState(126);
			value_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_existing_arrayContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(SimplerPlusPlusParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(SimplerPlusPlusParser.ASSIGN, 0); }
		public Value_declarationContext value_declaration() {
			return getRuleContext(Value_declarationContext.class,0);
		}
		public List<TerminalNode> OPEN_BRACKET() { return getTokens(SimplerPlusPlusParser.OPEN_BRACKET); }
		public TerminalNode OPEN_BRACKET(int i) {
			return getToken(SimplerPlusPlusParser.OPEN_BRACKET, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> CLOSE_BRACKET() { return getTokens(SimplerPlusPlusParser.CLOSE_BRACKET); }
		public TerminalNode CLOSE_BRACKET(int i) {
			return getToken(SimplerPlusPlusParser.CLOSE_BRACKET, i);
		}
		public Declaration_existing_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_existing_array; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitDeclaration_existing_array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_existing_arrayContext declaration_existing_array() throws RecognitionException {
		Declaration_existing_arrayContext _localctx = new Declaration_existing_arrayContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaration_existing_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(NAME);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				match(OPEN_BRACKET);
				setState(130);
				expression();
				setState(131);
				match(CLOSE_BRACKET);
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPEN_BRACKET );
			setState(137);
			match(ASSIGN);
			setState(138);
			value_declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_declarationContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Value_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitValue_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Value_declarationContext value_declaration() throws RecognitionException {
		Value_declarationContext _localctx = new Value_declarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Compared_expressionContext compared_expression() {
			return getRuleContext(Compared_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimplerPlusPlusParserVisitor ) return ((SimplerPlusPlusParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			compared_expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
